--- a/CampManager/Server/CampManager.Server.csproj
+++ b/CampManager/Server/CampManager.Server.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
@@ -8,6 +8,8 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Server" Version="6.0.6" />
+    <PackageReference Include="MongoDb.DatabaseProvider.Core" Version="1.0.0" />
+    <PackageReference Include="MongoDb.DatabaseProvider.Generators" Version="1.0.4" />
   </ItemGroup>
 
   <ItemGroup>
