--- a/CampManager/Shared/CampManager.Shared.csproj
+++ b/CampManager/Shared/CampManager.Shared.csproj
@@ -9,4 +9,7 @@
   <ItemGroup>
     <SupportedPlatform Include="browser" />
   </ItemGroup>
+	<ItemGroup>
+		<PackageReference Include="MongoDb.DatabaseProvider.Core" Version="1.0.0" />
+	</ItemGroup>
 </Project>
