--- a/CampManager/Server/CampManager.Server.csproj
+++ b/CampManager/Server/CampManager.Server.csproj
@@ -7,7 +7,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Server" Version="6.0.6" />
+    <PackageReference Include="FluentValidation.AspNetCore" Version="11.1.2" />
+    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Server" Version="6.0.7" />
     <PackageReference Include="MongoDb.DatabaseProvider.Core" Version="1.0.0" />
     <PackageReference Include="MongoDb.DatabaseProvider.Generators" Version="1.0.6" />
   </ItemGroup>
